public/main.css
/* ... */
nav, ul {
  list-style: none;
}

p {
  line-height: 1.5rem;
  hyphens: auto;
}

h4 {
  hyphens: auto;
}

a {
  text-decoration: none;
  color: inherit;
}

a:not(.btn .subscribeToNewsletterBtn):hover {
  text-decoration: underline;
  cursor: pointer;
}

.primaryBtn {
  border: none;
  background-color: hsl(360, 85%, 25%);
  font: normal 16px sans-serif;
  font-family: 'Roboto', sans-serif;
  color: hsl(40, 23%, 97%);
  border-radius: 4px;
  padding: 10px;
  text-transform: uppercase;
  box-shadow: 0 4px 4px 1px hsl(41, 8%, 61%);
  transform: translatey(-4px);
}

.primaryBtn:hover {
  box-shadow: 0 2px 2px hsl(41, 8%, 61%);
  transform: translatey(-2px);
}

.primaryBtn:active {
  box-shadow: 0 0 0 hsl(41, 8%, 61%);
  transform: translatey(0px);
}

.secondaryBtn {
  border: none;
  background-color: hsl(40, 15%, 80%);
  font: normal 16px sans-serif;
  font-family: 'Roboto', sans-serif;
  color: hsl(42, 15%, 13%);
  border-radius: 4px;
  padding: 10px;
  text-transform: uppercase;
  font-weight: bold;
  box-shadow: 0 4px 4px 1px hsl(39, 11%, 69%);
  transform: translatey(-4px);
}

.secondaryBtn:hover {
  box-shadow: 0 2px 2px hsl(39, 11%, 69%);
  transform: translatey(-2px);
}

.secondaryBtn:active {
  box-shadow: 0 0 0 hsl(39, 11%, 69%);
  transform: translatey(0px);
}

button {
  border: none;
  background-color: transparent;
  color: hsl(40, 23%, 97%);
}

button:hover {
  cursor: pointer;
}

button:focus {
  outline: none;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  padding: 40px 0;
}

section > h2 {
  padding-bottom: 20px;
}

section:not(slider):nth-child(even) {
  background-color: hsl(43, 13%, 90%);
}

.sectionTitleDiv {
  display: flex;
  justify-content: center;
  align-items: center;
}

.sectionTitleDiv i {
  padding-right: 10px;
  font-size: 20px;
}

hr {
  background-color: hsl(41, 8%, 61%);
  width: 90%;
  margin: 10px 0;
  padding: 0.5px;
  border-radius: 50%;
}

input,
textarea,
select {
  border: none;
  text-indent: 5px;
}

input:focus {
  outline: 0;
}

input[value] {
  color: hsl(42, 15%, 13%);
}

.readMoreBtn {
  background-color:hsl(41, 8%, 48%);
  border-radius: 5px;
  color: hsl(40, 23%, 97%);
  padding: 5px 20px;
  margin: 20px 0;
  box-shadow: 0 2px 2px .5px hsl(39, 11%, 69%);
  transform: translatey(-2px);
}

.readMoreBtn:hover {
  box-shadow: 0 1px 1px hsl(39, 11%, 69%);
  transform: translatey(-1px);
}

.readMoreBtn:active {
  box-shadow: 0 0 0 hsl(39, 11%, 69%);
  transform: translatey(0px);
}

/* ================================================ */


/* HEADER STYLE */

.header {
  background-color: hsl(360, 85%, 25%);
  padding-bottom: 5px;
  display: flex;
  justify-content: space-between;
  height: 120px;
}

.logoAndText {
  display: flex;
  flex-direction: row;
}

.usdtLogo {
  width: 100px;
  height: 100px;
  padding: 5px;
}

.logotext {
  color: hsl(40, 23%, 97%);
  padding: 10px;
}

h1 {
  text-shadow: 0 0 15px black; 
  font-family: Merriweather;
  font-weight: 700;
}

.logotext p {
  text-shadow: 0 0 5px black;
  font-family: Merriweather;
}

.headerUtilities {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-end;
  color: hsl(49, 100%, 96%);
  padding-right: 20px;
}


/* Text button that opens menu to login/register, etc */
#loginIcon {
  display: none;
}

#socialIcon {
  display: none;
}

#navIcon {
  display: none;
}

.userLoginDiv {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  z-index: 1;
}

.userLoginDiv > div {
  padding: 5px 10px;
}

.userLoginDiv a:hover {
  border-bottom: 2px solid hsl(49, 100%, 96%);
}

.socialMedia {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  padding-bottom: 10px;
  flex: 0 1 50%;
}

.socialMedia a:hover {
  transform: scale3d(1.1,1.1,1.1);
}

.smcontainer {
  border-radius: 40%;
  background-color: hsl(43, 13%, 90%);
  margin: 3px;
  width: 35px;
  height: 35px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.socialMediaIcon {
  height: 30px;
  width: 30px;
  padding: 2px;
  margin: 3px;
}


/* =================================================== */


/* NAV STYLE */

.hamburgerDiv {
  display: none;
}

.navcontainer {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  background-color: hsl(39, 11%, 69%);
  position: sticky;
  top: 0;
  z-index: 5;
  padding: 3px 0;
}

.navlist {
  display: flex;
  justify-content: center;
  align-items: center;
  color: hsl(49, 100%, 96%);
  width: 90%;
  background-color: hsl(39, 11%, 69%);
}

.navlist li,
.search-bar {
  margin: 0 15px;
  font-weight: bold;
}

.navli {
  position: relative;
  display: inline-block;
  padding: 3px 0;
}

.navli a:hover {
  text-decoration: underline;
  color: hsl(184, 91%, 17%);
}

.navli > a {
  padding: 0 3px;
}

.navliContent {
  position: absolute;
  width: max-content;
  background-color: hsl(40, 15%, 80%);
  border-radius: 4px;
  z-index: 5;
  padding: 0 5px;
  display: none;
  margin-top: 3px;
}

.navli:hover .navliContent {
  display: block;
}

.navliContent a {
  display: block;
  font-weight: normal;
  margin: 10px 5px;
  padding: 5px;
  color: hsl(42, 15%, 13%);
  font-weight: bold;
  border-radius: 4px;
}

.navli > a,
.search-icon {
  color: hsl(42, 15%, 13%)
}

.search-bar {
  display: flex;
  justify-content: center;
  /* border: 1px solid hsl(42, 15%, 13%); */
  border-radius: 4px;
}

.search-bar input {
  border-radius: 4px;
  border: none;
  padding-left: 5px;
}

.search-icon {
  padding: 5px;
}

/* =======HEADER AND NAV BAR RESPONSIVENESS================ */

@media screen and (max-width: 900px) {
  #loginIcon,
  #socialIcon
   {
    display: block;
    font-size: 16px;
    color: hsl(42, 15%, 13%);
  }

  .userLoginDiv > div {
    display: none;
  }

  .socialMedia a {
    display: none;
  }

  
}
/* ... */

